# libwidget

./: CMakeLists.txt  README.md  window.cpp  window.h  window_zh_CN.ts
widget/: CMakeLists.txt  frameless.cpp  frameless.h  frameless_zh_CN.ts
